feat: SVG modernes pour tous les boutons CTA 🎨
Remplacement flèches textuelles → par SVG paper plane sur tous les boutons:
- ✅ 'Poser ma question' (11 occurrences)
- ✅ 'Nous contacter' (6 occurrences)
- ✅ 'Postuler' (1 occurrence)
- ✅ 'Contactez notre agent IA' (1 occurrence)

Style SVG uniforme:
- Paper plane icon (path: M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z)
- Stroke: currentColor (hérite couleur bouton)
- Width: 18px, Height: 18px
- Margin-left: 6px (espacement)
- Vertical-align: middle

Total: 19 boutons modernisés
Cache buster: v=10 → v=11

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Liwe - Experts IT & Stratégiques</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Styles de base -->
-    <link rel="stylesheet" href="assets/css/styles-base.css?v=10">
+    <link rel="stylesheet" href="assets/css/styles-base.css?v=11">
     <!-- Styles responsives par device -->
-    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=10">
-    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=10">
-    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=10">
+    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=11">
+    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=11">
+    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=11">
 </head>
 <body>
     <!-- Hamburger Menu Button (Mobile only) -->
@@ -1555,7 +1555,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur la <span class="cta-highlight">Data & IA</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1602,7 +1602,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur le <span class="cta-highlight">Développement</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1649,7 +1649,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur le <span class="cta-highlight">Cloud</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1695,7 +1695,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur la <span class="cta-highlight">Cybersécurité</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1741,7 +1741,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur la <span class="cta-highlight">Cybersécurité</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1777,7 +1777,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Organiser un <span class="cta-highlight">Workshop</span> ?</h3>
                             <p class="cta-subtitle">Nos experts créent un format sur-mesure !</p>
-                            <button class="cta-button" onclick="openContactModal()">Nous contacter →</button>
+                            <button class="cta-button" onclick="openContactModal()">Nous contacter <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1813,7 +1813,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Organiser un <span class="cta-highlight">Workshop</span> ?</h3>
                             <p class="cta-subtitle">Nos experts créent un format sur-mesure !</p>
-                            <button class="cta-button" onclick="openContactModal()">Nous contacter →</button>
+                            <button class="cta-button" onclick="openContactModal()">Nous contacter <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1859,7 +1859,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur votre <span class="cta-highlight">stratégie Data</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1906,7 +1906,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'un <span class="cta-highlight">Product Manager</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1952,7 +1952,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur votre <span class="cta-highlight">stratégie Cloud</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -1998,7 +1998,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide sur la <span class="cta-highlight">gouvernance Cyber</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2045,7 +2045,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'accompagnement sur la <span class="cta-highlight">Gouvernance</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2097,7 +2097,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'aide pour <span class="cta-highlight">recruter des profils tech</span> ?</h3>
                             <p class="cta-subtitle">Un expert répond sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Poser ma question →</button>
+                            <button class="cta-button" onclick="openContactModal()">Poser ma question <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2182,7 +2182,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Une question <span class="cta-highlight">spécifique</span> ?</h3>
                             <p class="cta-subtitle">Nos experts vous répondent sous 24h !</p>
-                            <button class="cta-button" onclick="openContactModal()">Nous contacter →</button>
+                            <button class="cta-button" onclick="openContactModal()">Nous contacter <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2325,7 +2325,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Prêt à transformer <span class="cta-highlight">vos défis</span> en succès ?</h3>
                             <p class="cta-subtitle">Parlons de votre projet !</p>
-                            <button class="cta-button" onclick="openContactModal()">Nous contacter →</button>
+                            <button class="cta-button" onclick="openContactModal()">Nous contacter <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2381,7 +2381,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Prêt à <span class="cta-highlight">nous rejoindre</span> ?</h3>
                             <p class="cta-subtitle">Envoyez-nous votre CV et parlons de votre projet professionnel</p>
-                            <button class="cta-button" onclick="openChatModal('Je souhaite rejoindre Liwe', 'recruitment')">Postuler →</button>
+                            <button class="cta-button" onclick="openChatModal('Je souhaite rejoindre Liwe', 'recruitment')">Postuler <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2410,7 +2410,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Intéressé par un <span class="cta-highlight">partenariat</span> ?</h3>
                             <p class="cta-subtitle">Discutons de nos synergies et opportunités de collaboration</p>
-                            <button class="cta-button" onclick="openChatInterface()">Contactez notre agent IA →</button>
+                            <button class="cta-button" onclick="openChatInterface()">Contactez notre agent IA <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
@@ -2486,7 +2486,7 @@
                         <div class="cta-section">
                             <h3 class="cta-title">Besoin d'un <span class="cta-highlight">expert</span> pour votre projet ?</h3>
                             <p class="cta-subtitle">Nos experts sont à votre écoute !</p>
-                            <button class="cta-button" onclick="openContactModal()">Nous contacter →</button>
+                            <button class="cta-button" onclick="openContactModal()">Nous contacter <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="width: 18px; height: 18px; display: inline-block; vertical-align: middle; margin-left: 6px;"><path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/></svg></button>
                         </div>
                     </div>
                 </div>
